--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ===============================
 # MySQL Database Configuration
 # ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/bloodbank
+spring.datasource.url=jdbc:mysql://ec2-13-60-217-169.eu-north-1.compute.amazonaws.com:3306/bloodbank
 server.port=8081
 spring.datasource.username=root
 spring.datasource.password=Rudra@07
